tests/empty.ast.err
Error: Unexpected end of input while parsing expression, expected (
   ╭─[tests/empty.scm:1:1]
   │
 1 │ 
   · ┬  
   · ╰── Unexpected end of file
───╯
